--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,8 +13,8 @@ import Projects from "../components/Projects.astro"
 ---
 
 <Layout
-  title="Porfolio de midudev - Desarrollador y Programador Web con 15 años de experiencia"
-  description="Contrata a midudev para crear tu aplicación web o móvil. Desarrollador Web y Creador de Contenido. Especializado en crear aplicaciones únicas."
+  title="Portfolio David Gonzalez - Programador y Desarrollador de Software con +1 año de experiencia"
+  description="Desarrollador de Software con las capacidades necesarias para llevar a cabo proyectos de suma importancia"
 >
   <main class="px-4">
     <SectionContainer class="py-44 pb-32">
