--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -5,7 +5,7 @@ const EXPERIENCIE = [
     date: "01/12/2022 - Actualidad",
     title: "Desarrollador de Software - Hubsis Latinoamerica",
     description:
-      "En mi rol como Desarrollador de Software automatice los procesos de migración de cuentas contables en el sistema ERP Profit 2k12, desarrolle aplicaciones y sistemas de software, con tecnologías clave como Visual Studio, C#, Crystal Reports y SQL Server",
+      "En mi rol como Desarrollador de Software, automaticé los procesos de migración de cuentas contables en el sistema ERP Profit Plus 2k12, desarrollé aplicaciones y sistemas de software con tecnologías clave como Visual Studio, C#, Crystal Reports y SQL Server.",
     link: "https://www.hubsislatam.com/",
   },
 ]
