--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -1,11 +1,11 @@
 ---
 import ExperienceItem from "./ExperienceItem.astro"
 const EXPERIENCIE = [
-{
-    date: "01/12/2022 - Actualidad",
+  {
+    date: "01/12/2022 - 15/01/2024",
     title: "Desarrollador de Software - Hubsis Latinoamerica",
     description:
-      "En mi rol como Desarrollador de Software, automaticé los procesos de migración de cuentas contables en el sistema ERP Profit Plus 2k12, desarrollé aplicaciones y sistemas de software con tecnologías clave como Visual Studio, C#, Crystal Reports y SQL Server.",
+      "En mi rol como Desarrollador de Software, automaticé los procesos de migración de cuentas contables para muchos de nuestros clientes en el sistema ERP Profit Plus 2k12, desarrollé aplicaciones y sistemas de software con tecnologías clave como Visual Studio, C#, Crystal Reports y SQL Server.",
     link: "https://www.hubsislatam.com/",
   },
 ]
