edicion de titulo

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import SocialPill from "../components/SocialPill.astro"
 ---
 
 <Layout
-  title="Portfolio David Gonzalez - Programador y Desarrollador de Software con +1 año de experiencia"
+  title="Portfolio David Gonzalez - Programador | Desarrollador de Software con +1 año de experiencia"
   description="Desarrollador de Software con las capacidades necesarias para llevar a cabo proyectos de suma importancia"
 >
   <main class="px-4">
