--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -38,7 +38,7 @@ const { description, title } = Astro.props
 
 <style is:global>
   :root {
-    color-scheme: dark;
+    color-scheme: light dark;
   }
 
   html {
