--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -19,7 +19,7 @@ const { title, description, link, date } = Astro.props
   class="mb-1 text-sm font-normal leading-none text-sky-800 dark:text-sky-200/80"
   >{date}</time
 >
-<h3 class="text-lg font-semibold text-yellow-800 dark:text-yellow-200 mt-2">
+<h3 class="text-lg font-semibold text-yellow-700 dark:text-yellow-200 mt-2">
   {title}
 </h3>
 <p class="mb-4 text-base font-normal dark:text-gray-200 text-pretty">
@@ -28,7 +28,7 @@ const { title, description, link, date } = Astro.props
 {
   link && (
     <LinkButton href={link}>
-      Sitio Web{" "}
+      Hubsis Latinoamérica{" "}
       <svg
         class="w-3 h-3 ms-2 rtl:rotate-180"
         aria-hidden="true"
