--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,9 +1,9 @@
 ---
-const currentYear = new Date().getFullYear()
+const currentYear = new Date().getFullYear();
 ---
 
 <footer
-  class="rounded-lg shadow m-4 bg-black/5 dark:bg-black/20 backdrop-blur-lg w-full xl:w-[1120px] mx-auto mb-10"
+  class="rounded-lg shadow m-4 bg-black/5 backdrop-blur-lg w-full xl:w-[1120px] mx-auto mb-10"
 >
   <div
     class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between"
@@ -11,7 +11,9 @@ const currentYear = new Date().getFullYear()
     <span
       class="text-sm sm:text-center text-yellow-800/90 dark:text-yellow-200/90"
       >© {currentYear}
-      <a href="https://github.com/davgonsan" class="hover:underline">Davgonsan</a>.
+      <a href="https://github.com/davgonsan" target="_blank" class="hover:underline"
+        >davgonsan</a
+      >.
     </span>
     <ul
       class="flex flex-wrap items-center mt-3 text-sm font-medium dark:text-white/90 sm:mt-0"
