--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,17 @@
 ---
-import Layout from "../layouts/Layout.astro"
-import AboutMe from "../components/AboutMe.astro"
-import Badge from "../components/Badge.astro"
-import Briefcase from "../components/icons/Briefcase.astro"
-import CodeIcon from "../components/icons/Code.astro"
-import Experience from "../components/Experience.astro"
-import GitHubIcon from "../components/icons/GitHub.astro"
-import LinkedInIcon from "../components/icons/LinkedIn.astro"
-import MailIcon from "../components/icons/Mail.astro"
-import ProfileCheck from "../components/icons/ProfileCheck.astro"
-import Projects from "../components/Projects.astro"
-import SectionContainer from "../components/SectionContainer.astro"
-import SocialPill from "../components/SocialPill.astro"
+import Layout from "../layouts/Layout.astro";
+import AboutMe from "../components/AboutMe.astro";
+import Badge from "../components/Badge.astro";
+import Briefcase from "../components/icons/Briefcase.astro";
+import CodeIcon from "../components/icons/Code.astro";
+import Experience from "../components/Experience.astro";
+import GitHubIcon from "../components/icons/GitHub.astro";
+import LinkedInIcon from "../components/icons/LinkedIn.astro";
+import MailIcon from "../components/icons/Mail.astro";
+import ProfileCheck from "../components/icons/ProfileCheck.astro";
+import Projects from "../components/Projects.astro";
+import SectionContainer from "../components/SectionContainer.astro";
+import SocialPill from "../components/SocialPill.astro";
 ---
 
 <Layout
@@ -26,30 +26,28 @@ import SocialPill from "../components/SocialPill.astro"
         alt="Foto de David Gonzalez"
       />
       <h1
-        class="text-gray-900 dark:text-white text-3xl md:text-4xl lg:text-5xl font-bold flex flex-row gap-x-4 pb-6 lg:pb-10"
+        class="text-gray-900 dark:text-[rgb(255,252,255)] text-3xl md:text-4xl lg:text-5xl font-bold flex flex-row gap-x-4 pb-6 lg:pb-10"
       >
-        Hola, soy David <a
+        Hola, soy David 🇻🇪<a
           href="https://linkedin.com/in/david-gonzalez-dev2012"
           target="_blank"
           rel="noopener"
           class="flex justify-center items-center hover:scale-105 transition"
         >
-          <Badge>Disponible para trabajar</Badge>
+          <Badge>Disponible para proyectos</Badge>
         </a>
       </h1>
       <h2
         class="text-xl lg:text-2xl text-balance max-w-[700px] text-black dark:text-white"
       >
-      <span class="text-yellow-200/90">+1 año de experiencia como</span>
-      <span class="text-blue-200/90"> Desarrollador De Software.</span><span
-        class="opacity-90"
-        >
-        De Venezuela 🇻🇪
-      </span><span class="opacity-90">Especializado en</span><span
-        class="text-red-200/90"
-      >
-        otorgarle vida a tus ideas más ambiciosas
-      </span>
+        <span class="text-yellow-700 dark:text-yellow-200/90"
+          >+1 año de experiencia</span
+        > como
+        <span class="text-sky-700 dark:text-blue-200/90">
+          Desarrollador De Software. </span
+        ><span
+          class="opacity-90">Especializado en </span
+        ><span class="text-red-800 dark:text-red-200/90">otorgarle vida a tus ideas más ambiciosas</span>.
       </h2>
 
       <nav class="flex gap-4 mt-8 flex-wrap">
