cambios en la redireccion de miprofit

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -24,7 +24,7 @@
         ></strong
       >, <strong>único distribuidor autorizado</strong>
       del <strong
-        ><a href="https://www.miprofit.com/productos/" target="_blank"
+        ><a href="https://www.miprofit.com" target="_blank"
           >ERP Profit Plus 2k12</a
         ></strong
       > en el estado Zulia, para el desarrollo de <strong
