adding my country flag

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,8 @@ import ProfileCheck from "../components/icons/ProfileCheck.astro";
 import Projects from "../components/Projects.astro";
 import SectionContainer from "../components/SectionContainer.astro";
 import SocialPill from "../components/SocialPill.astro";
+import WhereIFrom from "../components/icons/Venezuela.astro";
+
 ---
 
 <Layout
@@ -28,7 +30,8 @@ import SocialPill from "../components/SocialPill.astro";
       <h1
         class="text-gray-900 dark:text-[rgb(255,252,255)] text-3xl md:text-4xl lg:text-5xl font-bold flex flex-row gap-x-4 pb-6 lg:pb-10"
       >
-        Hola, soy David 🇻🇪<a
+        Hola, soy David <WhereIFrom class="size-10" />
+        <a
           href="https://linkedin.com/in/david-gonzalez-dev2012"
           target="_blank"
           rel="noopener"
