--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,15 +1,16 @@
 ---
-import GitHub from "./icons/GitHub.astro"
-import NextJS from "./icons/NextJS.astro"
-import Tailwind from "./icons/Tailwind.astro"
-import LinkButton from "./LinkButton.astro"
-import NoEsAstro from "./icons/NoEsAstro.astro"
-import PHP from "./icons/PHP.astro"
-import JS from "./icons/JS.astro"
-import HTML from "./icons/HTML.astro"
-import CSS from "./icons/CSS.astro"
-import TypeScript from "./icons/TypeScript.astro"
-import Svelte from "./icons/Svelte.astro"
+import GitHub from "./icons/GitHub.astro";
+import NextJS from "./icons/NextJS.astro";
+import Tailwind from "./icons/Tailwind.astro";
+import LinkButton from "./LinkButton.astro";
+import NoEsAstro from "./icons/NoEsAstro.astro";
+import PHP from "./icons/PHP.astro";
+import JS from "./icons/JS.astro";
+import HTML from "./icons/HTML.astro";
+import CSS from "./icons/CSS.astro";
+import TypeScript from "./icons/TypeScript.astro";
+import Svelte from "./icons/Svelte.astro";
+import React from "./icons/React.astro";
 
 const TAGS = {
   NEXT: {
@@ -57,14 +58,20 @@ const TAGS = {
     class: "bg-[#ff3e00]",
     icon: Svelte,
   },
-}
+  React: {
+    //name: "React",
+    class: "bg-black",
+    icon: React,
+  },
+};
 const PROJECTS = [
   {
-    title: "VentureX - Sistema Administrativo para Empresas y Medianas Empresas",
+    title:
+      "VentureX - Sistema Administrativo para Empresas y Medianas Empresas",
     description:
       "Creado con tecnologías como PHP, JS, HTML y CSS. Es un sistema administrativo para gestionar información sobre productos, ventas, usuarios y ganancias comerciales.",
     //link: "https://github.com/davgonsan/SDV",
-    //github: "https://github.com/davgonsan/SDV",
+    github: "https://github.com/davgonsan/SDV",
     image: "./projects/VentureX.png",
     tags: [TAGS.PHP, TAGS.JS, TAGS.HTML, TAGS.CSS],
   },
@@ -72,16 +79,33 @@ const PROJECTS = [
     title: "SpotClone - Música Alojada En Servidor Local",
     description:
       "Clon del popular servicio de música Spotify construido utilizando Astro, un moderno generador de sitios front-end que ofrece rendimiento increíblemente rápido. Interfaz de usuario similar a Spotify. Reproducción de música. Funcionalidades de búsqueda, playlists y perfiles de usuario. Diseño adaptable a diferentes dispositivos (responsive design).",
+    //link: "https://github.com/davgonsan/SDV",
     github: "https://github.com/davgonsan/SpotClone",
     image: "./projects/SpotClone.png",
-    tags: [TAGS.HTML, TAGS.CSS, TAGS.JS, TAGS.TypeScript, TAGS.Svelte, TAGS.NoEsAstro],
+    tags: [
+      TAGS.HTML,
+      TAGS.CSS,
+      TAGS.JS,
+      TAGS.TypeScript,
+      TAGS.Svelte,
+      TAGS.NoEsAstro,
+    ],
   },
-]
+  {
+    title: "HomeBudget - Control de Presupuestos Personales",
+    description:
+      "Supervisar el presupuesto individual es beneficioso, sin embargo, cuando deseas hacer un seguimiento, esta opción no proporciona detalles sobre la cantidad gastada ni el lugar específico. Por esta razón, desarrollé una aplicación sencilla que registra tus gastos, permitiéndote ingresar detalles sobre cualquier gasto que desees calcular rápidamente, ya sea una celebración, una salida con amigos o simplemente algo que necesitas anotar de inmediato para el supermercado. La información se guarda en caché, garantizando la seguridad de tus datos, así que no hay necesidad de preocuparse por su almacenamiento :)",
+    link: "https://budget-app-davgonsan.netlify.app/",
+    github: "https://github.com/davgonsan/react-router-budget-app",
+    image: "./projects/HomeBudget.png",
+    tags: [TAGS.HTML, TAGS.CSS, TAGS.JS, TAGS.TypeScript, TAGS.React],
+  },
+];
 ---
 
 <section class="flex flex-col gap-y-16">
   {
-    PROJECTS.map(({ image, title, description, tags, /*link,*/  github }) => (
+    PROJECTS.map(({ image, title, description, tags, link, github }) => (
       <article>
         <h3 class="text-2xl font-semibold text-yellow-700 dark:text-yellow-200 mb-2">
           {title}
@@ -112,32 +136,36 @@ const PROJECTS = [
               Ver código fuente
             </LinkButton>
           )}
-          {/* <LinkButton href={link}>
-            <svg
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              fill="none"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            >
-              <>
-                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                <path d="M19.5 7a9 9 0 0 0 -7.5 -4a8.991 8.991 0 0 0 -7.484 4" />
-                <path d="M11.5 3a16.989 16.989 0 0 0 -1.826 4" />
-                <path d="M12.5 3a16.989 16.989 0 0 1 1.828 4" />
-                <path d="M19.5 17a9 9 0 0 1 -7.5 4a8.991 8.991 0 0 1 -7.484 -4" />
-                <path d="M11.5 21a16.989 16.989 0 0 1 -1.826 -4" />
-                <path d="M12.5 21a16.989 16.989 0 0 0 1.828 -4" />
-                <path d="M2 10l1 4l1.5 -4l1.5 4l1 -4" />
-                <path d="M17 10l1 4l1.5 -4l1.5 4l1 -4" />
-                <path d="M9.5 10l1 4l1.5 -4l1.5 4l1 -4" />
-              </>
-            </svg>
-            Ir al sitio web
-          </LinkButton>*/}
+          {link && (
+            <LinkButton href={link}>
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                fill="none"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                {
+                  <>
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                    <path d="M19.5 7a9 9 0 0 0 -7.5 -4a8.991 8.991 0 0 0 -7.484 4" />
+                    <path d="M11.5 3a16.989 16.989 0 0 0 -1.826 4" />
+                    <path d="M12.5 3a16.989 16.989 0 0 1 1.828 4" />
+                    <path d="M19.5 17a9 9 0 0 1 -7.5 4a8.991 8.991 0 0 1 -7.484 -4" />
+                    <path d="M11.5 21a16.989 16.989 0 0 1 -1.826 -4" />
+                    <path d="M12.5 21a16.989 16.989 0 0 0 1.828 -4" />
+                    <path d="M2 10l1 4l1.5 -4l1.5 4l1 -4" />
+                    <path d="M17 10l1 4l1.5 -4l1.5 4l1 -4" />
+                    <path d="M9.5 10l1 4l1.5 -4l1.5 4l1 -4" />
+                  </>
+                }
+              </svg>
+              Ir al sitio web
+            </LinkButton>
+          )}
         </footer>
       </article>
     ))
