comment VentureX Link

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -71,7 +71,7 @@ const PROJECTS = [
     description:
       "Creado con tecnologías como PHP, JS, HTML y CSS. Es un sistema administrativo para gestionar información sobre productos, ventas, usuarios y ganancias comerciales.",
     //link: "https://github.com/davgonsan/SDV",
-    github: "https://github.com/davgonsan/SDV",
+    //github: "https://github.com/davgonsan/SDV",
     image: "./projects/VentureX.png",
     tags: [TAGS.PHP, TAGS.JS, TAGS.HTML, TAGS.CSS],
   },
