cambio de imagen en sobre mi

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -33,7 +33,7 @@
     </p>
   </div>
   <img
-    src="/yo.jpg"
+    src="/me_updated.jpg"
     class="rounded-full size-64 md:size-1/3 order-1 md:order-2"
     alt="Foto de David Gonzalez"
   />
