--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -1,15 +1,24 @@
 <section class="flex flex-col md:flex-row gap-8 justify-center items-center">
   <div
-    class="[&>p]:mb-4 [&>p>strong]:text-yellow-700 dark:[&>p>strong]:text-yellow-200 [&>p>strong]:font-semibold text-pretty order-2 md:order-1"
+    class="[&>p]:mb-4 [&>p>strong]:text-blue-700 dark:[&>p>strong]:text-blue-300 [&>p>strong]:font-semibold text-pretty order-2 md:order-1"
   >
     <p>
-      Me llamo <strong>David</strong>, pero tú puedes llamarme cuando necesites
-      de mis servicios. Empecé desarrollando <strong
-        >sistemas de información e inventarios</strong
+      Me llamo <strong
+        ><a href="https://www.instagram.com/davidgonzalez928/" target="_blank"
+          >David</a
+        ></strong
+      >, pero tú puedes llamarme cuando necesites de mis servicios. Empecé
+      desarrollando <strong
+        ><a href="https://github.com/davgonsan/SDV" target="_blank"
+          >sistemas de información e inventarios</a
+        ></strong
       > en la universidad, los vendí junto con mis servicios de desarrollo e hice
       mis primeros clientes. Actualmente estoy trabajando como <strong>
-        Analista de Sistemas</strong
-      > en una de las empresas de
+        <a
+          href="https://www.google.com/search?q=Analista+de+Sistemas&sourceid=chrome&ie=UTF-8"
+          target="_blank">Analista de Sistemas</a
+        >
+      </strong> en una de las empresas de
       <strong
         ><a href="https://gruposansimon.com" target="_blank"
           >producción de alimentos más importantes del país</a
@@ -33,7 +42,7 @@
     </p>
   </div>
   <img
-    src="/me_updated.jpg"
+    src="/me2.jpg"
     class="rounded-full size-64 md:size-1/3 order-1 md:order-2"
     alt="Foto de David Gonzalez"
   />
