--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -94,7 +94,7 @@ const PROJECTS = [
   {
     title: "HomeBudget - Control de Presupuestos Personales",
     description:
-      "Supervisar el presupuesto individual es beneficioso, sin embargo, cuando deseas hacer un seguimiento, esta opción no proporciona detalles sobre la cantidad gastada ni el lugar específico. Por esta razón, desarrollé una aplicación sencilla que registra tus gastos, permitiéndote ingresar detalles sobre cualquier gasto que desees calcular rápidamente, ya sea una celebración, una salida con amigos o simplemente algo que necesitas anotar de inmediato para el supermercado. La información se guarda en caché, garantizando la seguridad de tus datos, así que no hay necesidad de preocuparse por su almacenamiento :)",
+      "Esta aplicación te ayuda a registrar tus gastos de forma rápida y sencilla. Puedes usarla para cualquier gasto, desde celebraciones hasta compras del supermercado. La información se guarda de forma segura en tu dispositivo, así que no tienes que preocuparte por la privacidad.",
     link: "https://budget-app-davgonsan.netlify.app/",
     github: "https://github.com/davgonsan/react-router-budget-app",
     image: "./projects/HomeBudget.png",
@@ -107,7 +107,7 @@ const PROJECTS = [
   {
     PROJECTS.map(({ image, title, description, tags, link, github }) => (
       <article>
-        <h3 class="text-2xl font-semibold text-yellow-700 dark:text-yellow-200 mb-2">
+        <h3 class="text-2xl font-semibold text-blue-700 dark:text-blue-400 mb-2">
           {title}
         </h3>
         <p class="text-lg mb-4 text-pretty">{description}</p>
