--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,14 +17,14 @@ import WhereIFrom from "../components/icons/Venezuela.astro";
 ---
 
 <Layout
-  title="Portfolio David Gonzalez - Programador | Desarrollador de Software con +1 año de experiencia"
-  description="Desarrollador de Software con las capacidades necesarias para llevar a cabo proyectos de suma importancia"
+  title="Portfolio David Gonzalez - Programador | Desarrollador de Software con 2 años de experiencia"
+  description="Desarrollador de Software | Proyectos"
 >
   <main class="px-4">
     <SectionContainer class="py-44 pb-32" id="contacto">
       <img
         class="rounded-full w-18 h-24 mb-4"
-        src="https://cdn.glitch.global/cbbdd7f8-860c-4fa1-8bd4-727dcfd4c0bc/me2.jpg?v=1704546447847"
+        src="../../public/me_comic.jpeg"
         alt="Foto de David Gonzalez"
       />
       <h1
@@ -43,14 +43,14 @@ import WhereIFrom from "../components/icons/Venezuela.astro";
       <h2
         class="text-xl lg:text-2xl text-balance max-w-[700px] text-black dark:text-white"
       >
-        <span class="text-yellow-700 dark:text-yellow-200/90"
-          >+1 año de experiencia</span
+        <span class="text-green-700 dark:text-green-400/90"
+          >+2 años de experiencia</span
         > como
-        <span class="text-sky-700 dark:text-blue-200/90">
+        <span class="text-sky-700 dark:text-blue-400/90">
           Desarrollador De Software. </span
         ><span
           class="opacity-90">Especializado en </span
-        ><span class="text-red-800 dark:text-red-200/90">otorgarle vida a tus ideas más ambiciosas</span>.
+        ><span class="text-red-800 dark:text-red-400/90">otorgarle vida a tus proyectos.</span>
       </h2>
 
       <nav class="flex gap-4 mt-8 flex-wrap">
