--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -1,13 +1,20 @@
 ---
 import ExperienceItem from "./ExperienceItem.astro"
 const EXPERIENCIE = [
-  {
+{
+    date: "22/01/2024 - Presente",
+    title: "Analista de Sistemas - Grupo San Simón",
+    description:
+      "Desarrollo soluciones web  en Grupo San Simón, con foco en la visualización de datos y la toma de decisiones.  Utilizo  herramientas como  Jasper Reports (integrado en el ERP iDempiere),  PHP, Javascript, CSS y bases de datos  (PostgreSQL, MySQL/MariaDB, SQL Server). Brindo soporte a procesos administrativos en áreas como Facturación, Despacho, Almacén y Compras.",
+    link: "https://gruposansimon.com/web/",
+  },  
+{
     date: "01/12/2022 - 15/01/2024",
     title: "Desarrollador de Software - Hubsis Latinoamérica",
     description:
       "En mi rol como Desarrollador de Software, automaticé los procesos de migración de cuentas contables para muchos de nuestros clientes en el sistema ERP Profit Plus 2k12, desarrollé aplicaciones y sistemas de software con tecnologías clave como Visual Studio, C#, Crystal Reports y SQL Server.",
     link: "https://www.instagram.com/hubsislatinoamerica",
-  },
+  }
 ]
 ---
 
