--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -12,23 +12,23 @@ const { title, description, link, date } = Astro.props
 ---
 
 <div
-  class="absolute w-3 h-3 rounded-full mt-1.5 -start-1.5 border border-gray-900 bg-gray-700"
+  class="absolute w-3 h-3 rounded-full mt-1.5 -start-1.5 border border-gray-900 bg-green-700"
 >
 </div>
 <time
-  class="mb-1 text-sm font-normal leading-none text-sky-800 dark:text-sky-200/80"
+  class="mb-1 text-sm font-bold leading-none text-green-950 dark:text-green-400/90"
   >{date}</time
 >
-<h3 class="text-lg font-semibold text-yellow-700 dark:text-yellow-200 mt-2">
+<h3 class="text-lg font-semibold text-green-700 dark:text-green-300 mt-2">
   {title}
 </h3>
-<p class="mb-4 text-base font-normal dark:text-gray-200 text-pretty">
+<p class="mb-4 text-base font-normal dark:text-gray-100 text-pretty">
   {description}
 </p>
 {
   link && (
     <LinkButton href={link}>
-      Hubsis Latinoamérica{" "}
+      Más Información{" "}
       <svg
         class="w-3 h-3 ms-2 rtl:rotate-180"
         aria-hidden="true"
