--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,7 @@ const currentYear = new Date().getFullYear();
     class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between"
   >
     <span
-      class="text-sm sm:text-center text-yellow-800/90 dark:text-yellow-200/90"
+      class="text-sm sm:text-center text-blue-800/90 dark:text-blue-400/90"
       >© {currentYear}
       <a href="https://github.com/davgonsan" target="_blank" class="hover:underline"
         >davgonsan</a
