update on img index

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ import WhereIFrom from "../components/icons/Venezuela.astro";
     <SectionContainer class="py-44 pb-32" id="contacto">
       <img
         class="rounded-full w-18 h-24 mb-4"
-        src="../../public/me_comic.jpeg"
+        src="https://cdn.glitch.global/cbbdd7f8-860c-4fa1-8bd4-727dcfd4c0bc/me_comic.jpeg?v=1728169693406"
         alt="Foto de David Gonzalez"
       />
       <h1
